# -f-A-Uma-lgebra-Hexarrelacional-de-Signific-ncia-para-Algoritmos

./: .gitignore  LICENSE  README.en.md  README.md  TERMS.md  package.json  tsconfig.json
.github/workflows/: sync-poeditor.yml
apps/api/: README.md  pyproject.toml
core/: i18n.py
docs/: AI_IMPLEMENTATION_PROMPT.md  ARCHITECTURE.md  PRD.md  REVENUE_DEFENSE.md  THREAT_MODEL.md
locales/: ar.json  en.json  ja.json  pt_BR.json  zh.json
prisma/: schema.prisma
src/app/: layout.tsx  page.tsx
src/app/api/algebra/operator/: route.ts
src/app/api/algebra/relations/: route.ts
src/app/api/algebra/transpile/: route.ts
tests/: test_i18n.py
